--- a/projeto-portfolio/estilos/style.css
+++ b/projeto-portfolio/estilos/style.css
@@ -7,3 +7,147 @@
   --destaque-inverso
   --fundo-card
 */
+ 
+*{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
+:root {
+    --fundo-principal: #f5f5f5;
+    --texto: #222222;
+    --texto-inverso: #ffffff;
+    --destaque: #0077ff;
+    --destaque-inverso: #66bbff;
+    --fundo-card: #ffffff;
+ }
+
+body {
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+/*Configurções Gerais*/
+
+i, h1{
+  color: var(--destaque);
+}
+
+h1 {
+  padding: 15px 0px;
+  font-size: 1.6em;
+}
+
+p {
+  text-align: left;
+  font-size: 1.1em;
+  line-height: 1.5;
+  letter-spacing: 0.3px;
+}
+/*Menu*/
+nav {
+  display: flex;
+  background-color: var(--destaque);
+  width: 100%;
+  height: 45px;
+  justify-content: right;
+  align-items: center;
+  padding-right: 15px;
+  
+  position: fixed;
+}
+
+nav i {
+  color: white;
+  padding: 25px;
+}
+
+#conteudo-total {
+  display: grid;
+  width: 97vw;
+  grid-template-columns: 50px 1fr  50px;
+  grid-template-rows: auto auto;
+  row-gap: 25px;
+}
+
+
+/*foto do perfil*/
+.foto-perfil {
+  display: flex;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  padding: 5px;
+  border: 5px solid var(--destaque);
+  justify-content: center;
+  margin: 70px auto 0px auto;
+  
+}
+
+#ficha {
+  grid-row: 1 / 2;
+  grid-column: 2 / -2 ;
+}
+
+
+/*Icones Rede Sociais*/
+#social {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin:20px 0px;
+}
+
+#social i {
+  font-size: 1.6em;
+  padding: 0px 20px;
+}
+/*Conteudo do Site*/
+#conteudo {
+  grid-row: 2 / -1;
+  grid-column: 2 / 3;
+}
+
+iframe {
+  border-radius: 10px;
+  width:100%;
+  height:50vw;
+}
+
+/*Habilidades (Minhas Skills)*/
+
+#skills h2 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight:600; 
+  padding-top: 20px;
+  padding-bottom: 2px;
+}
+/*Tamanho da fonte do nome de cada skill*/
+.nome {
+  font-size: 1.2em;
+}
+
+#skills i {
+ color: black;
+ font-weight: 600;
+}
+
+span {
+  display: flex;
+  justify-content: space-between;
+}
+/*porcentagem de cada skill*/
+.porcentagem {
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.3em;
+  font-weight: bold;
+  color: var(--destaque);
+}
+
+.habilidades {
+  background-color: var(--destaque-inverso);
+  width: 80%;
+  height: 10px;
+  border-radius: 15px; 
+}
