--- a/projeto-portfolio/estilos/style.css
+++ b/projeto-portfolio/estilos/style.css
@@ -8,6 +8,8 @@
   --fundo-card
 */
  
+/*Para Telas PEQUENAS*/
+
 *{
   padding: 0px;
   margin: 0px;
@@ -23,9 +25,20 @@
     --fundo-card: #ffffff;
  }
 
+body.escuro {
+  --fundo-principal: #222222;
+  --texto: #e0e0e0;
+  --texto-inverso:#333333;
+  --destaque:#ff5522;
+  --destaque-inverso:#a73917;
+  --fundo-card:#444444;
+}
+
 body {
-  background-color: white;
+  background-color: var(--fundo-principal);
+  color: var(--texto);
   font-family: Arial, Helvetica, sans-serif;
+  transition: 0.2s;
 }
 /*Configurções Gerais*/
 
@@ -59,7 +72,16 @@ nav {
 
 nav i {
   color: white;
-  padding: 25px;
+  margin: 0px 10px;
+  
+}
+
+nav div  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 45px;
 }
 
 #conteudo-total {
@@ -80,33 +102,58 @@ nav i {
   padding: 5px;
   border: 5px solid var(--destaque);
   justify-content: center;
-  margin: 70px auto 0px auto;
+  margin: 0px auto 0px auto;
   
 }
 
 #ficha {
+  background-color: var(--fundo-card);
   grid-row: 1 / 2;
   grid-column: 2 / -2 ;
+  display: block;
+  margin: auto;
+  
+  width: 100%;
+  height: 646px;
+  padding: 10px;
+  border-radius: 10px;
 }
 
+#ficha h1 , #ficha p {
+  display: block;
+  margin: auto;
+  width: auto;
+}
+
+#ficha h1 {
+  text-align: center;
+}
+
+#ficha::-webkit-scrollbar {
+    display: none;
+}
 
 /*Icones Rede Sociais*/
 #social {
   display: flex;
   width: 100%;
+  height: 10%;
   justify-content: center;
   align-items: center;
-  margin:20px 0px;
+  
 }
 
 #social i {
   font-size: 1.6em;
-  padding: 0px 20px;
+  margin: 0px 5px;
 }
 /*Conteudo do Site*/
 #conteudo {
   grid-row: 2 / -1;
   grid-column: 2 / 3;
+  background-color: var(--fundo-card);
+  padding: 10px;
+  border-radius: 10px;
 }
 
 iframe {
@@ -129,7 +176,7 @@ iframe {
 }
 
 #skills i {
- color: black;
+ color: var(--texto);
  font-weight: 600;
 }
 
@@ -183,11 +230,12 @@ div#hliderança {
 
 .cursos {
   margin:15px;
-  padding-left: 10px;
+  padding-left: 0px;
   border-left: 5px solid var(--destaque-inverso);
   border-radius: 8px;
   cursor:pointer;
   transition: border-width 0.5s, border-color 0.5s;
+  
 }
 
 .cursos:hover {
@@ -213,7 +261,9 @@ div#hliderança {
 }
 
 .conteudo-cursos {
-  background-color: white;
+  background-color: var(--fundo-principal);
+  border-radius: 5px 10px 10px 5px; 
+  padding-left: 5px;
 }
 
 /*Projetos*/
@@ -221,7 +271,7 @@ div#hliderança {
 #projetos > div {
   width: 100%;
   height: auto;
-  background-color: white;
+  background-color: var(--fundo-principal);
   margin: 15px 0px;
   border-radius: 5px;
   border-left: 5px solid var(--destaque-inverso);
@@ -260,7 +310,11 @@ details {
   padding-bottom: 5px;
 }
 
-#projetos div img {
+div.img-projeto {
+  display: flex;
+}
+
+#projetos div.img-projeto img {
   padding-top: 10px;
   width: 100%;
   border-radius: 20px;
@@ -268,27 +322,56 @@ details {
 
 
 footer {
-  display: center;
+  display: block;
   justify-content: center;
   align-items: center;
   
   width: 100%;
-  height: 50px;
+  
   background-color: var(--destaque);
-  color: white;
+  color: var(--texto);
   padding: 0px 70px;
 }
 
 footer p {
   text-align: center;
+  font-size: 1em;
 }
 
-footer a {
+/*Hover e Links*/
+
+ footer a {
   color: white;
+ }
+
+ a {
   font-weight: bold;
   text-decoration: none;
 }
 
-footer a:hover {
+ a:hover {
   color: var(--destaque-inverso);
+}
+
+#conteudo-total i:hover {
+  color: var(--destaque-inverso);
+  transition: 0.2s;
+}
+
+nav > div > a > i:hover {
+  color: var(--destaque);
+  transition: 0.2s;
+}
+
+nav div:hover {
+  background-color: var(--destaque-inverso);
+  border-radius: 5px;
+  transition: 0.2s;
+}
+
+
+@media screen and (max-width:768px) {
+  #ficha {
+    margin-top: 70px;
+  }
 }
