--- a/projeto-portfolio/estilos/style.css
+++ b/projeto-portfolio/estilos/style.css
@@ -114,7 +114,6 @@ nav div  {
   margin: auto;
   
   width: 100%;
-  height: 646px;
   padding: 10px;
   border-radius: 10px;
 }
@@ -129,6 +128,10 @@ nav div  {
   text-align: center;
 }
 
+#ficha p {
+  max-width: 50vw;
+}
+
 #ficha::-webkit-scrollbar {
     display: none;
 }
@@ -140,7 +143,8 @@ nav div  {
   height: 10%;
   justify-content: center;
   align-items: center;
-  
+  padding-top: 50px;
+  padding-bottom: 20px;
 }
 
 #social i {
